# NesEmulator

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/AdressMode/: Absolute.h  Empty.h  IAdressMode.h  Immediate.h  Implied.h  Indirect.h  IndirectInd.h  ZeroPage.h
src/Instructions/: HasAdressMode.h  HasFlags.h  IInstruction.h
src/Instructions/Access/: Access.h  Load.h  Store.h
src/Instructions/Arithmetic/: Add.h  Dec.h  Inc.h  Sub.h
src/Instructions/Bitwise/: And.h  Bitwise.h
src/Instructions/Branch/: Bcc.h  Bcs.h  Bne.h  Bpl.h  Branch.h  Bvs.h
src/Instructions/Compare/: Compare.h
src/Instructions/Flags/: SetFlag.h
src/Instructions/Jump/: Brk.h  Jmp.h  Jsr.h  Jump.h  Rti.h  Rts.h
src/Instructions/Other/: Nop.h
src/Instructions/Shift/: Shift.h
src/Instructions/Stack/: PullAcc.h  PullProcStatus.h  PushAcc.h  PushProcStatus.h  TransferFromStack.h  TransferToStack.h
src/Instructions/Transfer/: Transfer.h
src/NesProgram/: Cpu.h  DiscreteVal.h  Instructions.h  NesProgram.cpp  NesProgram.h  NesProgramMap.cpp  PPURegister.h  Structs.h
src/NesProgram/Flags/: Flag.h  Flags.h
src/NesProgram/Registers/: Accumulator.h  IRegister.h  Index.h  Registers.h
src/Processor/: Processor.cpp  Processor.h
src/Processor/AdressMode/: ZeroPage.h
src/Processor/Instructions/: HasAdressMode.h
src/Processor/Instructions/Arithmetic/: Add.h
src/Processor/Instructions/Bitwise/: Bit.h  Bitwise.h  Eor.h  Ora.h
src/Processor/Instructions/Branch/: Bcc.h  Beq.h  Bmi.h  Branch.h  Bvc.h
src/Processor/Instructions/Compare/: Cmp.h
src/Processor/Instructions/Flags/: SetFlag.h
src/Processor/Instructions/Jump/: Brk.h  Jsr.h  Rti.h  Rts.h
src/Processor/Instructions/Shift/: Asl.h  Lsr.h  Rol.h  Ror.h  Shift.h
src/Processor/Instructions/Stack/: PullProcStatus.h  PushAcc.h  PushProcStatus.h
src/Processor/Instructions/Transfer/: Transfer.h
src/Processor/Registers/: Index.h  Integer.h  Registers.h  StackPointer.h
src/Render/: Ppu.h  Render.cpp  Render.h
